--- a/package.json
+++ b/package.json
@@ -10,27 +10,23 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.3.0",
+    "@astrojs/rss": "^4.0.12",
     "@fontsource/alegreya": "^5.2.6",
     "@fontsource/alegreya-sans": "^5.2.6",
-    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "astro": "^5.10.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "embla-carousel-react": "^8.6.0",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.13",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.7.10",
     "@types/bun": "^1.2.17",
-    "tw-animate-css": "^1.3.4"
+    "depcheck": "^1.4.7"
   }
 }
