--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/react": "^4.3.0",
     "@astrojs/rss": "^4.0.12",
+    "@astrojs/sitemap": "^3.4.1",
     "@fontsource/alegreya": "^5.2.6",
     "@fontsource/alegreya-sans": "^5.2.6",
     "@tailwindcss/vite": "^4.1.11",
